Closed Bug 1887867 Opened 6 months ago Closed 5 months ago

Button subgrid incorrect alignment when has non-zero padding

Categories

(Core :: Layout: Grid, defect, P3)

Firefox 124
defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox126 --- fixed

People

(Reporter: me, Assigned: emilio)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:124.0) Gecko/20100101 Firefox/124.0

Steps to reproduce:

  1. open attached html

Actual results:

vertical scrollbar shown, comma span out of alignment, "world" on first line (button) overflows

Expected results:

no scrollbar, both lines look the same

ok in chrome

The Bugbug bot thinks this bug should belong to the 'Core::Layout: Grid' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout: Grid
Product: Firefox → Core
Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Severity: -- → S3
Priority: -- → P3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5241c2c37ecd Fix button-as-subgrid border/padding computations. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/45614 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: