Bug 1887867 - Fix button-as-subgrid border/padding computations. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D206896